--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,8 @@ services:
     runtime: node
     plan: starter
     region: oregon
-    buildCommand: npm install -g pnpm && pnpm install --frozen-lockfile && pnpm --filter @reviewcycle/server build
+    # Build from monorepo root, install all workspaces
+    buildCommand: corepack enable && corepack prepare pnpm@latest --activate && pnpm install && cd packages/server && pnpm build
     startCommand: cd packages/server && node dist/index.js
     healthCheckPath: /health
     envVars:
